# ecomech

./: .gitignore  .linkml-reference-validator.yaml  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  WORKPLAN.md  justfile  mkdocs.yml  project.justfile  pyproject.toml
conf/: oak_config.yaml
kb/processes/: Nitrogen_Cycling.yaml
references_cache/: PMID_12345678.md  PMID_17365317.md  PMID_17596626.md  PMID_18202647.md  PMID_23713117.md  PMID_23713120.md  PMID_23713126.md  PMID_30512067.md
src/ecomech/: __init__.py  cli.py
src/ecomech/schema/: ecomech.yaml
tests/: test_validate.py
